# AI_fiy

./: .gitignore  ESP32-S3 多模态情感陪伴智能体（V3.1） - 细化 User Stories 文档.md  Epic 文档：ESP32-S3 多模态情感陪伴智能体（V3.0 终极多模态版）.md  Epic 文档：ESP32-S3 多模态情感陪伴智能体（V4.0 云端架构演进版）.md  PROJECT_SUMMARY.md  UI_prd.md  User Stories：ESP32-S3 多模态情感陪伴智能体（V4.0 云端演进版）.md  android.md  android_v4.2_migration_summary.md  产品需求文档 (PRD)：ESP32 + MCP over MQTT 情感陪伴智能体.md  产品需求文档 (PRD)：ESP32-S3 多模态情感陪伴智能体.md
.agents/skills/start/: SKILL.md
.claude/: settings.local.json
.trellis/: .template-hashes.json  workflow.md
.trellis/spec/backend/: cloud-deployment.md  database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: index.md  web-monitor.md
.trellis/spec/guides/: cross-layer-thinking-guide.md  embedded-guidelines.md  index.md  (+3 more)
android/xiapiya-companion/: README.md  build.gradle.kts  settings.gradle.kts
backend/: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/tests/: test_basic.py
esp32/esp32-s3-mqtt-audio/: esp32-s3-mqtt-audio.ino
esp32/esp32-s3-mqtts-audio/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  SQUARELINE_UI_INTEGRATION.md  partitions.csv  sdkconfig  sdkconfig.defaults
esp32/esp32-s3-mqtts-audio/main/: CMakeLists.txt  i2s_audio.c  i2s_audio.h  idf_component.yml  lv_conf.h  lvgl_ui.c  lvgl_ui.h  main.c  mqtt_app.c  mqtt_app.h  state_machine.c  state_machine.h  tft_display.c  tft_display.h  vad.c  vad.h
esp32/esp32-s3-mqtts-audio/main/AIUI/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_helpers.c  ui_helpers.h
esp32/esp32-s3-mqtts-audio/main/AIUI/components/: ui_comp_hook.c
esp32/esp32-s3-mqtts-audio/main/AIUI/screens/: ui_MainScreen.c  ui_MainScreen.h
(+67 files in other folders)
